--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Write-on-me</title>
+    <title>Write-on-meeee</title>
 
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/7.12.0/firebase-app.js"></script>
